infra/kubernetes/tenants/meme-site/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meme-site
  namespace: dev-42wasd-admin
  labels:
    app: meme-site
spec:
  replicas: 1
  selector:
    matchLabels:
      app: meme-site
  template:
    metadata:
      labels:
        app: meme-site
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: nginx
          image: nginxinc/nginx-unprivileged:alpine
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            runAsNonRoot: true
            runAsUser: 101
            runAsGroup: 101
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: www
              mountPath: /usr/share/nginx/html
      volumes:
        - name: www
          configMap:
            name: meme-site-index
