infra/kubernetes/tenants/meme-site/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meme-site
  namespace: dev-42wasd-admin
spec:
  type: ClusterIP
  selector:
    app: meme-site
  ports:
    - name: http
      port: 80
      targetPort: 8080
